syntax = "proto3";
option go_package="wedy/pkg/bigcachex/proto";
message SeckillActivity {
	int64 ID=1;  // 活动ID
	int64 StartTime=2;// 开始时间
	int64 EndTime=3;// 结束时间
	int64 ProductID=4;// 参与秒杀的商品ID
	int64 Stock=5;// 库存总量
	int64 RemainingStock=6;// 剩余库存
	int64 Price=7;// 秒杀价格
	int64 Status=8;// 活动状态（未开始 1/进行中 2/已结束 -1）
	int64 LimitPerUser=9; // 每人限购数量
	string Name=10;// 活动名称
}
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative comment.proto